--- a/contact.html
+++ b/contact.html
@@ -1,54 +1,145 @@
-<!DOCTTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Me</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Artisan Bakery - Contact Us</title>
+  <!-- Bootstrap CSS CDN -->
+  <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1HIklE7xEE7RkJo/14mEjB44h7v7j/tWv+0U4P5KG2n"
+      crossorigin="anonymous"
+  />
+  <style>
+    body {
+      background-color: #ffe4eb; /* Light pink */
+      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    nav.navbar-dark {
+      background-color: #2c2f33 !important; /* Dark background */
+    }
+    nav.navbar-dark .navbar-nav .nav-link {
+      color: #ffffff;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    nav.navbar-dark .navbar-nav .nav-link:hover,
+    nav.navbar-dark .navbar-nav .nav-link:focus {
+      color: #ff6384;
+      text-decoration: underline;
+    }
+    footer {
+      background-color: #2c2f33;
+      color: #ffffff;
+      padding: 1rem 0;
+      text-align: center;
+      font-size: 0.9rem;
+      margin-top: 3rem;
+    }
+    .contact-card {
+      background: #fff0f6;
+      border-radius: 12px;
+      padding: 2rem;
+      box-shadow: 0 4px 10px rgb(0 0 0 / 0.1);
+    }
+    h2 {
+      color: #bb2d55;
+      font-weight: 700;
+      margin-bottom: 1rem;
+    }
+    .warm-message {
+      font-size: 1.2rem;
+      margin-bottom: 1.5rem;
+      color: #4a4a4a;
+    }
+    .contact-details a {
+      color: #bb2d55;
+      font-weight: 600;
+      text-decoration: none;
+    }
+    .contact-details a:hover {
+      text-decoration: underline;
+    }
+    .funny-guide {
+      font-style: italic;
+      color: #888;
+      margin-top: 1.5rem;
+    }
+  </style>
 </head>
 <body>
-  <!-- Bootstrap JS and dependencies -->
+  <!-- Navigation bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Artisan Bakery</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse justify-content-end"
+        id="navbarNav"
+      >
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Cakes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Feedback</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+  <!-- Main content -->
+  <main class="container py-5">
+    <div class="row justify-content-center">
+      <section class="col-md-8 contact-card">
+        <h2>Contact Us</h2>
+        <p class="warm-message">
+          We love hearing from cake enthusiasts like you! Whether you want to talk about your favorite flavor, ask for baking tips, or just say hello, we're here for you.
+        </p>
+        <div class="contact-details">
+          <p><strong>Email:</strong> <a href="mailto:zphuthego@gmail.com">zphuthego@gmail.com</a></p>
+          <p><strong>Phone:</strong> <a href="tel:+26773544890">+267 735 44890</a></p>
+        </div>
+        <p class="funny-guide">
+          Psst... If you don’t get a response right away, don’t fret — maybe our cakes distracted us, or we were busy frosting a masterpiece!
+        </p>
+      </section>
+    </div>
+  </main>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-  <header>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand" href="index.html">Sweet Sensations Bakery</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="cakes.html">Our Cakes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="classes.html">Bakery Classes</a>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="feedback.html">Feedback</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    
-  </header>
-  <main>
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Artisan Bakery. All rights reserved.
+  </footer>
 
-<h2>Contact Me</h2>
-
-<p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com" class="btn btn-success">zphuthego@gmail.com</a>.</p>
-    <footer>
-      <p>%copy: 2025 Your Name</p>
-    </footer>
+  <!-- Bootstrap JS CDN with Popper -->
+  <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-qQ5eQmWQbbuKfN1T8ulpGQafhDbj2jgPru63Fy6uQlO07D0Le9qBUU7toIbHIsdM"
+      crossorigin="anonymous"
+  ></script>
 </body>
+</html>
+
