--- a/contact.html
+++ b/contact.html
@@ -91,19 +91,19 @@
       >
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index,html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="about,html">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Cakes</a>
+            <a class="nav-link" href="cakes.html">Cakes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+            <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Feedback</a>
+            <a class="nav-link" href="feedback.html">Feedback</a>
           </li>
         </ul>
       </div>
