--- a/cakes.html
+++ b/cakes.html
@@ -52,9 +52,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto fw-semibold">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+           <li class="nav-item"><a class="nav-link" href="about.html">Amount </a></li>
+            <li class="nav-item"><a class="nav-link" href="classess.html">Baking Class</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
-          <li class="nav-item"><a class="nav-link" href="baking-class.html">Baking Class</a></li>
         </ul>
       </div>
     </div>
