--- a/cakes.html
+++ b/cakes.html
@@ -53,6 +53,7 @@
         <ul class="navbar-nav ms-auto fw-semibold">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
            <li class="nav-item"><a class="nav-link" href="about.html">Amount </a></li>
+          <li class="nav-item"><a class="nav-link" href="cakes.html">Cakes</a></li>
             <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
