--- a/classes.html
+++ b/classes.html
@@ -86,7 +86,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html#our-cakes-section">Our Cakes</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="classes.html">Baking Class</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
         </ul>
       </div>
     </div>
