--- a/cakes.html
+++ b/cakes.html
@@ -56,7 +56,7 @@
           <li class="nav-item"><a class="nav-link" href="cakes.html">Cakes</a></li>
             <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
         </ul>
       </div>
     </div>
