--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>About Me- Artisan Bakery</title>
 <!-- Bootstrap CSS -->
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -22,7 +22,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html#our-cakes-section">Our Cakes</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="classes.html">Baking Class</a></li>
-          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
+          <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
         </ul>
       </div>
     </div>
@@ -36,8 +36,8 @@
       <div class="row g-4 align-items-center">
         <div class="col-md-5">
           <img
-            src="https://images.unsplash.com/photo-1508214751196-bcfd4ca60f91?auto=format&fit=crop&w=600&q=80"
-            alt="Baking with grandmother"
+            src="Freash Bread.jpg"
+            alt="Fresh Bread.jpg"
             class="img-fluid rounded shadow-sm" />
         </div>
         <div class="col-md-7">
