--- a/about.html
+++ b/about.html
@@ -8,6 +8,31 @@
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  background-color: #ffe4eb; /* Light pink */
+      color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    nav.navbar-dark {
+      background-color: #2c2f33 !important; /* Dark background */
+    }
+    nav.navbar-dark .navbar-nav .nav-link {
+      color: #ffffff;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+    nav.navbar-dark .navbar-nav .nav-link:hover,
+    nav.navbar-dark .navbar-nav .nav-link:focus {
+      color: #ff6384;
+      text-decoration: underline;
+    }
+    footer {
+      background-color: #2c2f33;
+      color: #ffffff;
+      padding: 1rem 0;
+      text-align: center;
+      font-size: 0.9rem;
+      margin-top: 3rem;
+  }
    <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Artisan bakery</a>
