--- a/payment.html
+++ b/payment.html
@@ -12,26 +12,26 @@
     }
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-      data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-      aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav fw-semibold">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
         <li class="nav-item"><a class="nav-link" href="cakes.html">Our Cakes</a></li>
-        <li class="nav-item"><a class="nav-link" href="classes.html">Bakery Classes</a></li>
+        <li class="nav-item"><a class="nav-link" href="classes.html">Baking Class</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
         <li class="nav-item"><a class="nav-link" href="Feedback.html">Feedback</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
   <div class="payment-container">
     <h2 class="text-center text-danger mb-4">Payment Information</h2>
     <form id="paymentForm" novalidate>
@@ -106,9 +106,13 @@
       thankYouMessage.style.display = 'block';
     });
   </script>
-</body>
-  <footer class="footer">
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
+  crossorigin="anonymous"></script>
+
+   <footer class="footer">
   <p class="mb-0">&copy; 2025 Artisan Bakery. All rights reserved.</p>
 </footer>
-
+</body>
 </html>
