--- a/cakes.html
+++ b/cakes.html
@@ -187,11 +187,16 @@
       totalPriceDisplay.textContent = total.toFixed(2);
     });
   });
+    
+document.getElementById('treatsForm').addEventListener('submit', (e) => {
+  e.preventDefault();
 
-  document.getElementById('treatsForm').addEventListener('submit', (e) => {
-    e.preventDefault();
-    alert('Redirecting to payment page with total: P' + totalPriceDisplay.textContent);
-  });
+  const totalAmount = totalPriceDisplay.textContent;
+
+  // Redirect to payment.html and pass total amount as a query string
+  window.location.href = `payment.html?total=${encodeURIComponent(totalAmount)}`;
+});
+
 </script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
