--- a/payment.html
+++ b/payment.html
@@ -80,11 +80,6 @@
     </div>
   </div>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
-    crossorigin="anonymous"></script>
-
   <script>
     const form = document.getElementById('paymentForm');
     const thankYouMessage = document.getElementById('thank-you-message');
@@ -102,7 +97,20 @@
       thankYouMessage.style.display = 'block';
     });
   </script>
-  
+
+  <script>
+  // Get total from URL query and show it on the page
+  const urlParams = new URLSearchParams(window.location.search);
+  const total = urlParams.get('total');
+  if (total) {
+    const totalElement = document.createElement('p');
+    totalElement.innerHTML = `<strong>Total to Pay:</strong> P${total}`;
+    totalElement.style.fontSize = '1.25rem';
+    totalElement.style.marginBottom = '1rem';
+    document.querySelector('.payment-container')?.prepend(totalElement);
+  }
+</script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+6q8bY81QANwvN64/yPp6vsu6i4+"
   crossorigin="anonymous"></script>
