--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   
 </head>
-<body class=".body">
+<body class="body">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">Artisan Bakery</a>
